--- a/demos/code/index.html
+++ b/demos/code/index.html
@@ -80,10 +80,21 @@
 
   <xml xmlns="https://developers.google.com/blockly/xml" id="toolbox" style="display: none">
     <category name="Typed variable">
+      <label text="Integer"></label>
+      <block type="variables_dec_int"></block>
       <block type="variables_get_int"></block>
-      <block type="variables_set_int"></block>
+
+      <label text="Character"></label>
+      <block type="variables_dec_char"></block>
       <block type="variables_get_char"></block>
-      <block type="variables_set_char"></block>
+
+      <label text="Float"></label>
+      <block type="variables_dec_float"></block>
+      <block type="variables_get_float"></block>
+
+      <label text="Double"></label>
+      <block type="variables_dec_double"></block>
+      <block type="variables_get_double"></block>
     </category>
     <category name="%{BKY_CATLOGIC}" colour="%{BKY_LOGIC_HUE}">
       <block type="controls_if"></block>
