Created a new Library for producing code in c

--- a/demos/code/index.html
+++ b/demos/code/index.html
@@ -13,7 +13,7 @@
   <script src="../../python_compressed.js"></script>
   <script src="../../php_compressed.js"></script>
   <script src="../../lua_compressed.js"></script>
-  <script src="../../dart_compressed.js"></script>
+  <script src="../../C.js"></script>
   <script src="code.js"></script>
 </head>
 <body>
@@ -43,7 +43,7 @@
             <td class="tabmin tab_collapse">&nbsp;</td>
             <td id="tab_lua" class="taboff tab_collapse">Lua</td>
             <td class="tabmin tab_collapse">&nbsp;</td>
-            <td id="tab_dart" class="taboff tab_collapse">Dart</td>
+            <td id="tab_dart" class="taboff tab_collapse">C</td>
             <td class="tabmin tab_collapse">&nbsp;</td>
             <td id="tab_xml" class="taboff tab_collapse">XML</td>
             <td class="tabmin">&nbsp;</td>
