Cleaner way to support variables found

--- a/demos/code/index.html
+++ b/demos/code/index.html
@@ -81,7 +81,7 @@
   <xml xmlns="https://developers.google.com/blockly/xml" id="toolbox" style="display: none">
     <category name="Typed variable">
       <label text="Integer"></label>
-      <block type="variables_dec_int"></block>
+      <block type="variables_declare"></block>
       <block type="variables_get_int"></block>
       <block type="variables_set_int"></block>
 
