--- a/demos/code/index.html
+++ b/demos/code/index.html
@@ -82,8 +82,8 @@
     <category name="Typed variable">
       <label text="Variable"></label>
       <block type="variables_declare"></block>
-      <block type="variables_get_int"></block>
-      <block type="variables_set_int"></block>
+      <block type="variables_get_C"></block>
+      <block type="variables_set_C"></block>
     </category>
     <category name="%{BKY_CATLOGIC}" colour="%{BKY_LOGIC_HUE}">
       <block type="controls_if"></block>
