initial support for pointers started (dec get and set blocks made)

--- a/demos/code/index.html
+++ b/demos/code/index.html
@@ -84,6 +84,10 @@
       <block type="variables_declare"></block>
       <block type="variables_get_C"></block>
       <block type="variables_set_C"></block>
+      <label text="Pointers"></label>
+      <block type="pointers_declare"></block>
+      <block type="pointers_get_C"></block>
+      <block type="pointers_set_C"></block>
     </category>
     <category name="%{BKY_CATLOGIC}" colour="%{BKY_LOGIC_HUE}">
       <block type="controls_if"></block>
