--- a/demos/code/index.html
+++ b/demos/code/index.html
@@ -88,6 +88,8 @@
       <block type="pointers_declare"></block>
       <block type="pointers_get_C"></block>
       <block type="pointers_set_C"></block>
+      <block type="valueAt"></block>
+      <block type="addressOf"></block>
     </category>
     <category name="%{BKY_CATLOGIC}" colour="%{BKY_LOGIC_HUE}">
       <block type="controls_if"></block>
